<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignupFragment"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/viewpager_bkg"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="12"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="12"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/name"
        android:padding="10dp"
        android:background="@drawable/viewpager_bkg"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="12"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/email"
        android:padding="10dp"
        android:background="@drawable/viewpager_bkg"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/viewpager_bkg"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="12"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/viewpager_bkg"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup"
        android:ems="12"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="#202d12"/>


</LinearLayout>