<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment"
    android:orientation="vertical"
    android:gravity="center">


    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/viewpager_bkg"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="12"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="12"
        android:hint="@string/password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:background="@drawable/viewpager_bkg"
        android:padding="10dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:ems="12"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="#202d12"
        android:textAllCaps="false"/>

</LinearLayout>