<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.MainFragment">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/popular_bg_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="#66000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="horizontal"
                        android:background="@drawable/bg_transparan">

                        <EditText
                            android:id="@+id/main_text_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/placeholer"
                            android:inputType="text"
                            android:textSize="20sp"
                            android:background="#00000000"
                            android:layout_gravity="center"/>

                        <ImageButton
                            android:id="@+id/main_btn_search"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/search"
                            android:layout_gravity="center"
                            android:background="#00000000"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/popular_tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:paddingVertical="16dp"/>

                    <TextView
                        android:id="@+id/popular_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:paddingBottom="20dp" />

                    <Button
                        android:id="@+id/button_watch"
                        android:layout_width="146dp"
                        android:layout_height="38dp"
                        android:text="@string/watch_trial"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="10dp"
                        android:drawableLeft="@drawable/play_btn_fill"
                        android:background="@drawable/bckgrn_red" />

                </LinearLayout>


            </FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:text="@string/whats_popular"
                android:textSize="24sp"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:textColor="#6B6B6B" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_to_watch"
                android:textColor="#6B6B6B"
                android:textSize="24sp"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:paddingVertical="24dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:paddingBottom="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#032541"
                android:padding="22dp">

                <LinearLayout
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_basic"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_basic_under"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_involed"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_involed_under"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community_under"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingVertical="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="MUVIME"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_rigts_reserved"
                    android:textColor="#545454"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/facebook"
                        android:paddingRight="7dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/instagram"
                        android:paddingRight="7dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/twitter"
                        android:paddingRight="7dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/youtube"
                        android:paddingRight="7dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/api_terms_of_use"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>