<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.SearchResultFragment">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:id="@+id/search_bg_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="40dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="horizontal"
                        android:background="@drawable/bg_transparan">

                        <EditText
                            android:id="@+id/search_text_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/placeholer"
                            android:inputType="text"
                            android:textSize="20sp"
                            android:background="#00000000"
                            android:layout_gravity="center"/>

                        <ImageButton
                            android:id="@+id/search_btn_search"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/search"
                            android:layout_gravity="center"
                            android:background="#00000000"/>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="30dp"
                android:paddingHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_results"
                    android:textSize="24sp"
                    android:textColor="#6B6B6B"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/search_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="4"
                    android:textColor="#6B6B6B"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/records"
                    android:textColor="#6B6B6B"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="end"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:paddingBottom="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#032541"
                android:padding="22dp">

                <LinearLayout
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_basic"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_basic_under"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_involed"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_involed_under"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community_under"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingVertical="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="MUVIME"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_rigts_reserved"
                    android:textColor="#545454"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/facebook"
                        android:paddingRight="7dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/instagram"
                        android:paddingRight="7dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/twitter"
                        android:paddingRight="7dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/youtube"
                        android:paddingRight="7dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/api_terms_of_use"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>